@@ -186,6 +186,17 @@
 #endif
 
 /*
+ * Set CONF_WITH_DIP_SWITCHES to 1 to enable support for STe/TT/Falcon DIP switches
+ */
+#ifndef CONF_WITH_DIP_SWITCHES
+# if TOS_VERSION < 0x200
+#  define CONF_WITH_DIP_SWITCHES 0
+# else
+#  define CONF_WITH_DIP_SWITCHES 1
+# endif
+#endif
+
+/*
  * Set CONF_WITH_NVRAM to 1 to enable NVRAM support
  */
 #ifndef CONF_WITH_NVRAM
